scripts/obp-virtual-services.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: obp-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "obp-api.apps.cluster-demo-2763.demo-2763.example.opentlc.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: obp-api
spec:
  hosts:
  - "obp-api.apps.cluster-demo-2763.demo-2763.example.opentlc.com"
  gateways:
  - obp-gateway
  http:
  - match:
    - uri:
        prefix: /my/logins
    route:
    - destination:
        host: obpapi-service
        port:
          number: 80
    corsPolicy:
      allowOrigin:
      - "*"
      allowMethods:
      - POST
      - GET
      - PUT
      - DELETE
      allowCredentials: true
      allowHeaders:
      - Authorization
