scripts/virtual-services.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: blackjack
spec:
  hosts:
  - "istio-ingressgateway-user1-istio-system.apps.cluster-chcompra-2f88.chcompra-2f88.open.redhat.com"
  gateways:
  - blackjack-gateway
  http:
  - match:
    - uri:
        prefix: /blackjack.html
    - uri:
        exact: /blackjack.css
    - uri:
        exact: /blackjack.js
    - uri:
        exact: /dashboard.html
    - uri:
        exact: /dashboard.js
    - uri:
        exact: /card-rh.png
    - uri:
        exact: /table.png
    - uri:
        exact: /jquery.dynatable.css
    - uri:
        exact: /jquery.dynatable.js
    route:
    - destination:
        host: blackjack-frontend
        port:
          number: 8080
    corsPolicy:
      allowOrigin:
      - "*"
      allowMethods:
      - POST
      - GET
      - PUT
      - DELETE
      allowCredentials: true
      allowHeaders:
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: blackjack-users
spec:
  hosts:
  - "istio-ingressgateway-user1-istio-system.apps.cluster-chcompra-2f88.chcompra-2f88.open.redhat.com"
  gateways:
  - blackjack-gateway
  http:
  - match:
    - uri:
        exact: /blackjack/user
    route:
    - destination:
        host: blackjack-users
        port:
          number: 8080
    corsPolicy:
      allowOrigin:
      - "*"
      allowMethods:
      - POST
      - GET
      - PUT
      - DELETE
      allowCredentials: true
      allowHeaders:
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: blackjack-payment
spec:
  hosts:
  - "istio-ingressgateway-user1-istio-system.apps.cluster-chcompra-2f88.chcompra-2f88.open.redhat.com"
  gateways:
  - blackjack-gateway
  http:
  - match:
    - uri:
        exact: /blackjack/payment
    route:
    - destination:
        host: blackjack-payment
        port:
          number: 8080
    corsPolicy:
      allowOrigin:
      - "*"
      allowMethods:
      - POST
      - GET
      - PUT
      - DELETE
      allowCredentials: true
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: blackjack-ranking
spec:
  hosts:
  - "istio-ingressgateway-user1-istio-system.apps.cluster-chcompra-2f88.chcompra-2f88.open.redhat.com"
  gateways:
  - blackjack-gateway
  http:
  - match:
    - uri:
        exact: /blackjack/ranking
    route:
    - destination:
        host: blackjack-ranking
        port:
          number: 8080
    corsPolicy:
      allowOrigin:
      - "*"
      allowMethods:
      - POST
      - GET
      - PUT
      - DELETE
      allowCredentials: true
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: blackjack-status
spec:
  hosts:
  - "istio-ingressgateway-user1-istio-system.apps.cluster-chcompra-2f88.chcompra-2f88.open.redhat.com"
  gateways:
  - blackjack-gateway
  http:
  - match:
    - uri:
        exact: /blackjack/status
    route:
    - destination:
        host: blackjack-status
        port:
          number: 8080
    corsPolicy:
      allowOrigin:
      - "*"
      allowMethods:
      - POST
      - GET
      - PUT
      - DELETE
      allowCredentials: true
